# mosaic

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  run.sh
bindings/python/: Cargo.toml  main.py
bindings/python/modalic_client_sdk/: client.py
bindings/python/python_sdk/: __init__.py  client.py  testing.py
bindings/python/src/: lib.rs
client-sdk/: Cargo.toml  build.rs
client-sdk/src/: lib.rs
client-sdk/src/client/: mod.rs
client-sdk/src/client/grpc/: mod.rs  traits.rs
client-sdk/src/configs/: mod.rs
client-sdk/src/state_engine/: mod.rs  mpc.rs  smpc.rs
client-sdk/src/state_engine/states/: connect.rs  idle.rs  mod.rs  new_task.rs  state.rs  stop.rs  train.rs  update.rs
configs/: config.toml  (+1 more)
modalic-client-sdk/: Cargo.toml
modalic-client-sdk/src/: http_client.rs  lib.rs  traits.rs
modalic-client-sdk/src/client/: client.rs  mod.rs  reqwest_client.rs  settings.rs
modalic-client-sdk/src/message_encoder/: encoder.rs
modalic-client-sdk/src/settings/: max_message_size.rs  mod.rs
modalic-client-sdk/src/state_machine/: io.rs  phase.rs  state_machine.rs
modalic-client-sdk/src/state_machine/phases/: mod.rs  new_round.rs  update.rs
modalic-client-sdk/src/utils/: concurrent_futures.rs
modalic/core/: Cargo.toml
modalic/core/src/: common.rs  lib.rs
modalic/core/src/mask/: masking.rs  mod.rs  scalar.rs  seed.rs
modalic/core/src/message/: message.rs  mod.rs
modalic/core/src/message/payload/: sum.rs  sum2.rs  update.rs
modalic/core/src/message/utils/: chunkable_iterator.rs
modalic/core/src/model/: mod.rs  model.rs  object.rs  serialize.rs
modalic/core/src/model/config/: mod.rs  serialize.rs
modalic/core/src/testutils/: messages.rs  multipart.rs
mosaic/: Cargo.toml  README.md
mosaic-bindings/python/: Cargo.toml  README.md  build-wheels.sh  main.py  pyproject.toml  setup.py
mosaic-bindings/python/python/mosaic_python_sdk/: client.py
mosaic-bindings/python/python_sdk/: client.py  model.py
mosaic-bindings/python/src/: lib.rs
mosaic/aggregator/: Cargo.toml  build.rs
mosaic/aggregator/src/: aggr.rs  buffer.rs  configs.rs  lib.rs  rest.rs
mosaic/aggregator/src/aggr/: aggr.rs  buffer.rs  counter.rs  mod.rs  protocol.rs
mosaic/aggregator/src/grpc/: mod.rs  traits.rs
mosaic/aggregator/src/services/: error.rs  mod.rs
mosaic/aggregator/src/services/fetchers/: mod.rs  model.rs  round_parameters.rs  seed_dict.rs  sum_dict.rs
mosaic/aggregator/src/services/messages/: decryptor.rs  error.rs  message_parser.rs  mod.rs  state_engine.rs  task_validator.rs
mosaic/aggregator/src/settings/: mod.rs  s3.rs
mosaic/aggregator/src/state_engine/: channel.rs  coordinator.rs  event.rs  events.rs  init.rs  mod.rs
mosaic/aggregator/src/state_engine/states/: collect.rs  failure.rs  handler.rs  idle.rs  mod.rs  shutdown.rs  state.rs  unmask.rs  update.rs
mosaic/aggregator/src/storage/: mod.rs  store.rs  traits.rs
mosaic/aggregator/src/storage/aggr_storage/: mod.rs  noop.rs
mosaic/aggregator/src/storage/model_storage/: noop.rs  s3.rs
mosaic/aggregator/src/storage/trust_anchor/: noop.rs
mosaic/coordinator/: Cargo.toml
mosaic/coordinator/src/: lib.rs
mosaic/core/: Cargo.toml  build.rs
mosaic/core/src/: common.rs  lib.rs
mosaic/core/src/crypto/: encrypt.rs  hash.rs  mod.rs  prng.rs  sign.rs
mosaic/core/src/dp/: mod.rs
mosaic/core/src/mask/: masking.rs  mod.rs  scalar.rs  seed.rs
mosaic/core/src/mask/config/: mod.rs  serialization.rs
mosaic/core/src/mask/object/: mod.rs
mosaic/core/src/message/: message.rs  mod.rs  traits.rs
mosaic/core/src/message/grpc/: mosaic.protos.rs
mosaic/core/src/message/payload/: chunk.rs  mod.rs  sum.rs  sum2.rs  update.rs
mosaic/core/src/message/utils/: chunkable_iterator.rs  mod.rs
mosaic/core/src/model/: mod.rs  model.rs  object.rs  serde.rs  serialize.rs  tensor.rs
mosaic/core/src/model/config/: mod.rs
mosaic/core/src/protos/: dtype.rs  mod.rs  mosaic.protos.rs  msflp.rs  tensor.rs  tensor_shape.rs
mosaic/proto/: dtype.proto  mosaic.proto  tensor.proto  tensor_shape.proto
mosaic/selector/: Cargo.toml
mosaic/selector/src/: lib.rs
mosaic/selector/src/proxy/: grpc_server.rs
mosaic/selector/src/sampling/: mod.rs
mosaic/server/: Cargo.toml
mosaic/server/src/: lib.rs
mosaic/server/src/settings/: mod.rs
mosaic/src/: lib.rs
mosaic/src/core/: mod.rs  model.rs
mosaic/src/core/aggregator/: features.rs  fedopt.rs  mod.rs  traits.rs
mosaic/src/db/: s3.rs  traits.rs
mosaic/src/engine/: channel.rs  mod.rs  watch.rs
mosaic/src/engine/states/: aggregate.rs  collect.rs  error.rs  idle.rs  shutdown.rs  state.rs
mosaic/src/proxy/: mod.rs  server.rs
mosaic/src/rest/: mod.rs  stats.rs
mosaic/src/service/fetch/: mod.rs  model.rs
mosaic/src/service/messages/: mod.rs  parsing.rs
mosaic/src/settings/: default.toml  mod.rs
server/: Cargo.toml  build.rs
server/proto/: mosaic.proto
server/src/: lib.rs  message.rs  server.rs
server/src/core/: mod.rs  model.rs
server/src/core/aggregator/: features.rs  fedopt.rs  mod.rs  traits.rs
server/src/db/: s3.rs  storage.rs  traits.rs
server/src/engine/: channel.rs  mod.rs  model.rs  watch.rs
server/src/engine/states/: aggregate.rs  collect.rs  error.rs  failure.rs  idle.rs  mod.rs  shutdown.rs  state.rs
server/src/engine/utils/: features.rs
server/src/proxy/: message.rs  server.rs
server/src/rest/: client.rs  mod.rs  stats.rs
server/src/service/: error.rs  mod.rs
server/src/service/fetch/: mod.rs  model.rs  stats.rs
server/src/service/messages/: engine.rs  mod.rs  parsing.rs
server/src/settings/: mod.rs
source/server/: Cargo.toml  build.rs
source/server/src/: db.rs  lib.rs  message.rs  server.rs
source/server/src/db/: mod.rs  s3.rs  storage.rs  traits.rs
source/server/src/engine/: channel.rs  mod.rs  model.rs  tunnel.rs  watch.rs
source/server/src/engine/message/: mod.rs
source/server/src/engine/phases/: collect.rs  handling.rs  init.rs  mod.rs  phase.rs  shutdown.rs
source/server/src/service/: error.rs  mod.rs
source/server/src/services/: mod.rs
source/server/src/settings/: mod.rs
(+132 files in other folders)
