[package]
name = "client-sdk"
authors = ["Daniel Illner <illner@modalic.ai>"]
description = ""
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"
rust-version = "1.61.0" 
readme = "README.md"

[dependencies]

# External crates.
async-trait = "0.1.51"
derive_more = { version = "0.99.16", default-features = false, features = [
    "display",
    "from",
] }
thiserror = "1.0.34"

# Tokio ecosystem.
tokio = { version = "1.0.0",features = ["full", "tracing"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }