[package]
name = "client-sdk"
authors = ["Daniel Illner <illner@modalic.ai>"]
description = ""
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"
rust-version = "1.61.0" 
readme = "README.md"

[dependencies]

# External crates.
async-trait = "0.1.51"
config = "0.13.1"
derive_more = { version = "0.99.16", default-features = false, features = [
    "display",
    "from",
] }
futures = { version = "0.3.0", features = ["thread-pool"]}
futures-core = "0.3"

serde = { version = "1.0.144", features = ["derive"] }
thiserror = "1.0.34"
validator = { version = "0.16.0", features = ["derive"] }

# Tokio ecosystem.
tokio = { version = "1.0.0",features = ["full", "tracing"] }
prost = "0.11.0"
tonic = "0.8.1"
tower = "0.4.13"
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.8"