[package]
name = "modalic-client-sdk"
authors = ["Daniel Illner <illner@modalic.ai>"]
description = ""
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"
rust-version = "1.61.0" 
readme = "README.md"

[dependencies]
# Internal crates.
modalic_core = { path = "../modalic/core" }

# external crates.
async-trait = "0.1.57"
base64 = "0.13.0"
bincode = "1.3.3"
derive_more = { version = "0.99.17", default-features = false, features = ["from"] }
# TODO: remove once concurrent_futures.rs was moved to the e2e package
futures = "0.3.24"
paste = "1.0.8"
serde = { version = "1.0.144", features = ["derive"] }
sodiumoxide = "0.2.7"
thiserror = "1.0.32"

# TODO: move to dev-dependencies once concurrent_futures.rs was moved to the e2e package
tokio = { version = "1.20.1", features = ["rt", "macros"] }
tracing = "0.1.36"
url = "2.2.2"

# feature: reqwest client
reqwest = { version = "0.11.10", default-features = false, features = ["rustls-tls"]}
# reqwest = { version = "0.11.10", default-features = false, optional = true }
# This has to match the version used by reqwest. It would be nice if
# reqwest just re-exported it
# bytes = { version = "1.0.1", optional = true }
bytes = "1.0.1"
rand = "0.8.5"

[dev-dependencies]
mockall = "0.11.2"

[features]
default = []
# reqwest-client = ["bytes"]
# reqwest-client = ["reqwest", "bytes"]
