[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.53"
byteorder = { version = "1", default-features = false }
async-trait = "0.1.51"
derive_more = { version = "0.99.16", default-features = false, features = [
    "display",
    "from",
] }
config = "0.11.0"
thiserror = "1.0.30"
displaydoc = "0.2.3"
structopt = "0.3.25"

rug = "1.15.0"
serde = { version = "1.0.130", features = ["derive"] }
validator = { version = "0.14.0", features = ["derive"] }

tokio = { version = "1.0.0",features = ["full", "tracing"] }
tokio-util = { version = "0.6.3", features = ["full"] }
tokio-stream = "0.1"

tonic = "0.6.2"
tower = {version = "0.4"}
hyper = {version = "0.14", features = ["full"]}
bytes = "1.1.0"
prost = "0.9"

tracing = "0.1"
tracing-subscriber = { version = "0.3.2", features = ["env-filter"] }
futures = { version = "0.3.0", features = ["thread-pool"]}
futures-core = "0.3"

rayon = "1.5.1"
rust-s3 = "0.28.1"

[build-dependencies]
tonic-build = "0.6"
