[package]
name = "python-client-sdk"
authors = ["Daniel Illner <illner@modalic.ai>"]
description = ""
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"
rust-version = "1.61.0" 
readme = "README.md"

[dependencies]
# Internal Dependencies
client-sdk = { path = "../../client-sdk", version = "0.1.0"}
# External Crates
pyo3 = { version = "0.17.1", features = ["extension-module"] }

[lib]
name = "python_client_sdk"
crate-type = ["cdylib"]