[package]
name = "mosaic_sdk"
authors = ["Daniel Illner <illner@modalic.ai>"]
description = ""
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"
rust-version = "1.61.0" 
readme = "README.md"

[package.metadata.maturin]
classifiers = [
        "Development Status :: 2 - Alpha",
        "License :: OSI Approved :: Apache Software License",
        "Programming Language :: Python :: 3 :: Only",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Operating System :: MacOS :: MacOS X",
        "Operating System :: POSIX :: Linux",
]
requires-python = ">=3.7"
python-source = "test"

[lib]
name = "mosaic_sdk"
crate-type = ["cdylib"]

[dependencies]
# Internal Dependencies
client-sdk = { path = "../../client-sdk", version = "0.1.0"}
# External Crates
pyo3 = { version = "0.16.3", features = ["extension-module"] }
# pyo3-asyncio = { version = "0.16.0", features = ["tokio-runtime"] }