[package]
name = "modalic_core"
authors = ["Daniel Illner <illner@modalic.ai>"]
description = ""
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"
rust-version = "1.61.0"
readme = "README.md"

[dependencies]
# external dependencies
anyhow = "1.0.62"
bitflags = "1.3.2"
# Common features add-ons.
derive_more = { version = "0.99.17", default-features = false, features = [
    "as_ref",
    "as_mut",
    "display",
    "from",
    "index",
    "index_mut",
    "into",
] }

num = { version = "0.4.0", features = ["serde"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = { version = "1.0.144", features = ["derive"] }
sodiumoxide = "0.2.7"
thiserror = "1.0.32"

[features]
default = []
full = ["async", "secure"]

# Set features.
async = []
secure = []

[dev-dependencies]
paste = "1.0.8"
