[package]
name = "aggregator"
authors = ["Daniel Illner <illner@modalic.ai>"]
description = ""
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"
rust-version = "1.61.0"
readme = "README.md"

[[bin]]
name = "mosaic_aggregator"
path = "src/bin/main.rs"

[dependencies]
async-trait = "0.1.51"
config = "0.13.1"
derive_more = { version = "0.99.17", default-features = false, features = [
    "display",
    "from",
]}
futures = { version = "0.3.24", features = ["thread-pool"]}
futures-core = "0.3.24"

serde = { version = "1.0.144", features = ["derive"] }
structopt = "0.3.25"
thiserror = "1.0.34"

tokio = { version = "1.2.1",features = ["full", "tracing"] }
tonic = "0.8.1"
prost = "0.11.0"
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }

validator = { version = "0.16.0", features = ["derive"] }

[dev-dependencies]

[build-dependencies]
tonic-build = "0.8"