[package]
name = "aggregator"
authors = ["Daniel Illner <illner@modalic.ai>"]
description = ""
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"
rust-version = "1.61.0"
readme = "README.md"

[[bin]]
name = "aggregator"
path = "src/bin/main.rs"

[dependencies]
# Mosaic internals.
mosaic_core = { path = "../core" }

# External crates.
# ansi_term = "0.12.1"
anyhow = "1.0.62"
async-trait = "0.1.57"
base64 = "0.13.0"
bincode = "1.3.3"
bitflags = "1.3.2"
bytes = "1.0.1"
config = "0.12.0"
chrono = "0.4.22"
derive_more = { version = "0.99.17", default-features = false, features = [
    "as_mut",
    "as_ref",
    "deref",
    "display",
    "from",
    "index",
    "index_mut",
    "into",
] }
displaydoc = "0.2.3"
futures = "0.3.24"
hex = "0.4.3"
http = "0.2.8"
influxdb = "0.5.2"
num = { version = "0.4.0", features = ["serde"] }
num_enum = "0.5.7"
once_cell = "1.13.1"
paste = "1.0.8"
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = { version = "1.0.144", features = ["derive"] }
rayon = "1.5.3"
redis = { version = "0.21.6", default-features = false, features = [
    "aio",
    "connection-manager",
    "script",
    "tokio-comp",
] }
sodiumoxide = "0.2.7"
structopt = "0.3.26"
thiserror = "1.0.32"

# Tokio ecosystem.
tokio = { version = "1.20.1", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "sync",
    "net",
    "time",
] }
tower = { version = "0.4.6", default-features = false, features = [
    "buffer",
    "load-shed",
    "limit"
] }
tracing = "0.1.36"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
validator = { version = "0.16.0", features = ["derive"] }
warp = "0.3.1"

# feature: model-persistence
fancy-regex = { version = "0.10.0", optional = true }
rusoto_core = { version = "0.46.0", optional = true }
rusoto_s3 = { version = "0.46.0", optional = true }

[dev-dependencies]

[build-dependencies]

[features]
default = []
full = ["async", "secure", "redis", "model-persistence", "metrics", "tls"]

# Set features.
async = []
secure = []
redis = []
metrics = []
model-persistence = ["fancy-regex", "rusoto_core", "rusoto_s3"]
tls = ["warp/tls"]
