[package]
name = "mosaic_core"
authors = ["Daniel Illner <illner@modalic.ai>"]
description = ""
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"
rust-version = "1.61.0"
readme = "README.md"

[dependencies]
bytes = "1.2.1"
prost = "0.11.0"

derive_more = { version = "0.99.17", default-features = false, features = [
    "display",
    "from",
]}
rug = "1.17.0"

[build-dependencies]
prost-build = { version = "0.11.0" }