[package]
name = "mosaic_core"
authors = ["Daniel Illner <illner@modalic.ai>"]
description = ""
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"
rust-version = "1.61.0"
readme = "README.md"

[dependencies]
# Common features add-ons.
derive_more = { version = "0.99.17", default-features = false, features = [
    "as_ref",
    "as_mut",
    "display",
    "from",
    "index",
    "index_mut",
    "into",
] }

protobuf = "2.27.1"
thiserror = "1.0.34"
serde = { version = "1.0.144", features = ["derive"] }
# 
sodiumoxide = "0.2.7"
rug = "1.17.0"

# tokio ecosystem
prost = "0.11.0"
tonic = "0.8.1"

[build-dependencies]
tonic-build = "0.8"