[package]
name = "server"
authors = ["Daniel Illner <illner@modalic.ai>"]
description = "Implementation of a general aggregation server sitting at the heart of a Federated Learning pipeline."
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"
rust-version = "1.61.0"
readme = "README.md"

[[bin]]
name = "mosaic"
path = "src/bin/main.rs"

[dependencies]
mosaic_core = { path = "../core" }

config = "0.13.1"
derive_more = { version = "0.99.17", default-features = false, features = [
    "display",
    "from",
]}

serde = { version = "1.0.144", features = ["derive"] }
structopt = "0.3.25"
thiserror = "1.0.34"

tokio = { version = "1.2.1",features = ["full", "tracing"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
validator = { version = "0.16.0", features = ["derive"] }
