[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.0",features = ["full", "tracing"] }
tokio-util = { version = "0.6.3", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.6"
prost = "0.9"

tracing = "0.1"
tracing-subscriber = "0.2"
futures = { version = "0.3.0", features = ["thread-pool"]}
thiserror = "1.0.30"

[build-dependencies]
tonic-build = "0.6"
