[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = { version = "1", default-features = false }
config = "0.11.0"
thiserror = "1.0.30"
displaydoc = "0.2.3"
structopt = "0.3.25"
num = { version = "0.4.0", features = ["serde"] }
serde = { version = "1.0.130", features = ["derive"] }
validator = { version = "0.14.0", features = ["derive"] }

tokio = { version = "1.0.0",features = ["full", "tracing"] }
tokio-util = { version = "0.6.3", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.6"
prost = "0.9"

tracing = "0.1"
tracing-subscriber = "0.2"
futures = { version = "0.3.0", features = ["thread-pool"]}

[build-dependencies]
tonic-build = "0.6"
